--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ######################################################################
 Revision history for Perl extension PasswordMonkey
 
+0.07  2011/08/09
+    (ms) Fixed test suite
+
 0.06  2011/08/03
     (ms) Public release to Github
 
