--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ######################################################################
 Revision history for Perl extension PasswordMonkey
 
+0.08  2011/08/17
+    (ms) Added missing Term::ReadKey for testsuite
+
 0.07  2011/08/09
     (ms) Fixed test suite
 
