Added documentation for timeout value

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ######################################################################
 Revision history for Perl extension PasswordMonkey
 
+0.09  (not yet released)
+    (ms) Added documentation of timeout parameter
+
 0.08  2011/08/17
     (ms) Added missing Term::ReadKey for testsuite
 
