added todo list

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension PasswordMonkey
 
 TODO: Add Bouncer::NoEcho and Bouncer::Retry implementations
+TODO: If a bouncer fails, provide means to continue the program
+TODO: Bouncer failures should be visible in output, right now
+      it's just hanging on a prompt if logging is turned off.
+TODO: Add AddUser filler plugin
 
 0.09  (not yet released)
     (ms) Added documentation of timeout parameter
