Bouncer error now gets reported as LOGWARN

--- a/Changes
+++ b/Changes
@@ -2,9 +2,6 @@
 Revision history for Perl extension PasswordMonkey
 
 TODO: Add Bouncer::NoEcho and Bouncer::Retry implementations
-TODO: If a bouncer fails, provide means to continue the program
-TODO: Bouncer failures should be visible in output, right now
-      it's just hanging on a prompt if logging is turned off.
 TODO: Document dealbreaker
 
 0.09  2011/12/17
@@ -13,6 +10,7 @@ TODO: Document dealbreaker
          sure the password isn't echoed even if the collecting program
          forgot to turn echoing off.
     (ms) PasswordMonkey::Filler::Password plugin and tests
+    (ms) Bouncer error now gets reported as LOGWARN
 
 0.08  2011/08/17
     (ms) Added missing Term::ReadKey for testsuite
